[package]
name = "tracing-json-formatter"
version = "0.3.6"
authors = ["Théo Posty <theo@posty.fr>"]
edition = "2021"

repository = "https://github.com/theo-coder/tracing-json-formatter"
documentation = "https://docs.rs/tracing-json-formatter/"
readme = "README.md"

description = "A Json formatter for the tracing crate"

keywords = ["logging", "metrics", "tracing", "json", "subscriber"]
categories = ["development-tools::profiling", "development-tools::debugging"]

[lib]
path = "src/lib.rs"

[features]
default = []
arbitrary-precision = ["serde_json/arbitrary_precision"]

[dependencies]
tracing = { version = "0.1.13", default-features = false, features = ["log", "std"] }
tracing-subscriber = { version = "0.3.16", default-features = false, features = ["registry", "fmt"] }
tracing-log = { version = "0.1" }
log = "0.4.8"
serde_json = { version = "1.0.52" }
serde = "1.0.106"
gethostname = "0.4.3"
tracing-core = "0.1.10"
time = { version = "0.3", default-features = false, features = ["formatting"] }
ahash = "0.8.2"
chrono = "0.4.24"

[dev-dependencies]
claims = "0.7.1"
lazy_static = "1.4.0"
tracing = { version = "0.1.13", default-features = false, features = ["log", "std", "attributes"] }
time = { version = "0.3", default-features = false, features = ["formatting", "parsing", "local-offset"] }
